# esp-skainet

./: .codespellrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml
.gitlab/ci/: pre_commit.yml
components/hardware_driver/: CMakeLists.txt  Kconfig.projbuild
components/hardware_driver/boards/esp32s3-devkitc-1/: bsp_board.c
components/hardware_driver/boards/include/: bsp_board.h  esp32_s3_devkitc_1_board.h
docs/en/hw-reference/esp32/: user-guide-esp32-korvo-v1.1.md
docs/en/hw-reference/esp32s3/: user-guide-korvo-1.md
docs/zh_CN/hw-reference/esp32s3/: user-guide-korvo-1.md
examples/: README.md
examples/voice_activity_detection/: README.md
examples/wake_word_detection/afe/: README-10-英文语音识别-纯英文版.md  README-4-模型加载-唤醒词命令词.md  README-5-自定义命令词.md  README-6-TODO-能力路线图.md  README-7-GPIO硬件控制-语音控LED.md  README-7-GPIO硬件控制-语音控LED灯风扇蜂鸣器.md  README-8-命令词未匹配后转FastAPI方案.md  README-8-语音遥控车-L298N双电机舵机.md  README-9-WiFi-配置门户.md  README-9-双语识别-中英文切换方案.md  README-afe-1.md  README-afe-2.md  README-afe-model.md  README-afe-todo.md  README-构建流程-从零开始.md  README-模型加载-唤醒词命令词.md  README-自定义命令词.md  README-驱动优化-INMP441.md  README.md  partitions.csv  sdkconfig.defaults.esp32s3
examples/wake_word_detection/afe/main/: CMakeLists.txt  Kconfig.projbuild  cmd_handler.c  cmd_handler.h  gpio_buzzer.c  gpio_buzzer.h  gpio_ctrl.c  gpio_ctrl.h  gpio_fan.c  gpio_fan.h  gpio_led.c  gpio_led.h  gpio_motor.c  gpio_motor.h  gpio_servo.c  gpio_servo.h  main.c  wifi_portal.c  wifi_portal.h
test/: README.md
